<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/welcome_register"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_input_username"
        android:inputType="textPassword"
        android:padding="@dimen/_20sdp" />

    <EditText
        android:id="@+id/et_email_regis"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_email_register"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_20sdp" />

    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_pass_register"
        android:inputType="textPassword"
        android:padding="@dimen/_20sdp" />

    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_passverify_register"
        android:inputType="textPassword"
        android:padding="@dimen/_20sdp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_button"
        android:text="@string/text_register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/itLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>