<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_android" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_28sdp"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email_login"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_35sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_email_login"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_20sdp" />

    <EditText
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/hint_pass_login"
        android:inputType="textPassword"
        android:padding="@dimen/_20sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <Button
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:layout_marginStart="@dimen/_5sdp"/>

</LinearLayout>